Stable versions
---------------

4.0.8 ():
	- Fix ignored amplify option (by Dennis Lindroos)
	- Fix Win64 compatibility (by Ozkan Sezer)
	- Fix screen corruption with large number of rows

4.0.7 (20140224):
	- Fix NetBSD sound driver (by shattered)
	- Fix Haiku sound driver
	- Fix info message display time
	- Start instrument numbering at 1
	- Minor cosmetic fixes

4.0.6 (20130519):
	- Fix error when g++ is absent on non-BeOS (by Jan Engelhardt)
	- Portability fixes to build with Visual C++

4.0.5 (20130512):
	- Change buildsystem to use automake (by Jan Engelhardt)
	- Fix loop when skipping to first file and it's not playable

4.0.4 (20130428):
	- Fix executable suffix in MinGW32
	- Fix frame info display in Windows (reported by vaseleos0)
	- Fix build issues with Solaris Studio

4.0.3 (20130421):
	- Fix native-endian coreaudio output (reported by Misty De Meo)
	- Fix MinGW32 build (reported by vaseleos0)
	- Fix Cygwin build (reported by Benjamin Shadwick)
	- Fix module-specifc flags to override built-in quirks (requires
	  libxmp 4.1 or later)
	- Don't place configuration file in places like /usr/local/etc

	New features requested by Benjamin Shadwick:
	- Add commands '<' and '>' to jump to previous/next sequence
	- Add command 'z' to toggle the subsong explorer on/off
	- Add option -z <num> to play a specified sequence
	- Add option -Z to play all sequences in module
	- Add option --loop-all to loop over entire module list

4.0.2 (20130407):
	- Fix data type in coreaudio driver

	Changes by Jan Engelhardt:
	- give Pulseaudio higher priority than ALSA
	- give ALSA output higher priority than OSS
	- fix background process handling
	- sanitize background/foreground notation

4.0.1 (20130216):
	- fix license issues reported by Jan Engelhardt
	- fix pulseaudio detection (by Emanuel Haupt)

4.0.0 (20130213):
	- rewrite player to use libxmp 4.0